// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1846944c4d716d",
  "0acbc5a9502857",
  "16aabcfb714452",
  "03d9e91310912c",
  "14bdb5ed135628",
  "0e6aecd37eb305",
  "17cce676223629",
  "19fe81306d9c47",
  "0c2b2ce41fe4aa",
  "1b00d905d8d1ca",
  "0ac3df817ec9d7",
  "13573548f28b71",
  "1c8a7437911b1c",
  "048cdb6ef032bb",
  "19e1fe5b4da348",
  "0e52159b7eb888",
  "1e4e344a6bc2c3",
  "1ca0e8f10aa81a",
  "1fe1d8cb7803d3",
  "0f80e1b8f66077",
  "070701492c2037",
  "193667832f5f3f",
  "16f55842903a23",
  "1fb70fe9dac6c1",
  "0e1ea098e183eb",
  "0e89ef1bc3ca64",
  "01c6d3b7959739",
  "0160ad55b91d52",
  "0db5ec6d0e58fe",
  "197db8ebda4e54",
  "1e9d4f031c640c",
  "1ce3483c76ed29",
  "070c2206a52e85",
  "0fc1c7b73a3b67",
  "1615674b813c33",
  "1983698f9111da",
  "0fed086c0df55b",
  "0a420d83fd0ca4",
  "02726ce52c55b1",
  "06de6ec0259fc6",
  "07393a407c5e24",
  "1cbdf84772e5ac",
  "0ce963bdbb5e03",
  "1ecb6ec763c094",
  "1c9c03451a6cf4",
  "1671b26841dbe6",
  "05db7e21749998",
  "1eb1e402b165ec",
  "18468dc314842f",
  "09d66060dee349",
  "1c3faa79b43feb",
  "08f34543c58035",
  "0476c1e75ff053",
  "08c59fd31eedcd",
  "193288a5034edf",
  "0f8919d9d9c26f",
  "19b4f8e779e11c",
  "17141cc1c95d34",
  "1cbfe81aa2c600",
  "1fce20e49c2ed3",
  "0e47fabd8b318f",
  "004e300a6f7d87",
  "02d7541f4b4147",
  "00f411cde71dcc",
  "1414c67a7fa61f",
  "0b92e31b39146a",
  "03ce1a9460d8e4",
  "07887e86791ba4",
  "0d95be27dd8f80",
  "019fde5cb0d226",
  "195ac46efea002",
  "1dd84cf64fa640",
  "0af950acdd5aab",
  "09aae866e69683",
  "187c2dd4a715e0",
  "18a7f4a543cce3",
  "03387019de45a1",
  "09d183c52aab42",
  "099d0d0bf99c6e",
  "12b751305d360d",
  "0e10e818566379",
  "0bc3da397297a9",
  "13fb59d38b4d17",
  "0e2af96a8ff494",
  "1f7f0926fe27b6",
  "1b30e68232a9eb",
  "121fcf81af49cd",
  "0e2f4f1872b79d",
  "06b8c3d57c3ea0",
  "1dc2410eb24fe8",
  "1123e3483f043f",
  "0547ff76d08486",
  "0927d73e7a772c",
  "0a42ee337ce47a",
  "077cb22e065e1b",
  "1021a026c3173e",
  "01b3ad272939b6",
  "19cd8c52d61bbc",
  "07b877fe2f852d",
  "0b3ec2e0ea6e2f",
  "0560dbced8b71b",
  "018f1bdc696497",
  "19e1f7ada5f60a",
  "01a07a65f92823",
  "0a79ff5400a821",
  "1d8d1aa5fd9519",
  "16cf5859f37b6d",
  "09ab9d0a9a1656",
  "12409c67dd5e51",
  "1add97a7ac29dc",
  "1729f8f10eeab0",
  "121e584c8c76fc",
  "0ca0b1c087eefe",
  "0210a72ecd9e1f",
  "15268210740502",
  "0a618e3a894f7d",
  "1032373cedb95e",
  "0dcbe5b8269fb8",
  "16cca8be3fc3f2",
  "1ac1c5677e4819",
  "0ea54280ba196d",
  "074aec105a2bbb",
  "1917060c6e71bf",
  "1cd9c4fb0a1b72",
  "085158b37460b7",
  "0a6300a3c66071",
  "09bb86d9766216",
  "141492083c35b9",
  "0e7e63e8c36652",
  "1d5be8979b4641",
  "17d8650b84a326",
  "1014e757fb8b84",
  "0ac63a70adede1",
  "0929f1bf931c93",
  "16fb7e5c6f8320",
  "11cb7a8bdbe4a3",
  "09ce83479442f1",
  "005dae10ca26dd",
  "0b12c796e2740a",
  "0348dc6e12f433",
  "04540312b71502",
  "0d8f3c97f7a585",
  "11646050e3131c",
  "0004c8f44c8226",
  "055ef070f7cc67",
  "122a17c1a885a1",
  "1f01c68ef76633",
  "1cdfa3e74f8dfc",
  "1ecac5931ed4b2",
  "0d44eaab519d0e",
  "1282cfe8ecbb8e",
  "0a4c052019cfcf",
  "1061f578438f4f",
  "12359d17c05314",
  "15ef1496fb116f",
  "09a9f972879b1b",
  "030efe37a43ff0",
  "0f4b55db7afa4f",
  "0e1f2b7d598273",
  "1d3a543286fcf1",
  "0c0e335bd61af1",
  "025413e9d4aa90",
  "173849d5982830",
  "14435ab1785d15",
  "00ff072f29f1fb",
  "12a44c0eec83ff",
  "05a7f3f4b2b654",
  "11d878722ba851",
  "1326108c24fe72",
  "0a6402d2f025b9",
  "0bf5f7f809b9d1",
  "1a4ab2dc6b0222",
  "0b19bccd0a34ef",
  "0e94b568ac13c2",
  "1cdeb579585ce7",
  "0ef8ccf44e8426",
  "1a9f3f19c92e47",
  "04feddba2cfd5e",
  "1f09c40655823f",
  "179fbe496f3cd4",
  "10f7de95b81ff0",
  "1eb5c42ed1045b",
  "185b8857979698",
  "0945332f61cd85",
  "186d8021ad6d4e",
  "0e60bf400f1771",
  "1fff7366085414",
  "026ed5b96ea5e7",
  "04777ce1897832",
  "160f02dc64c806",
  "0120b2dd32442a",
  "0386eaa024fae6",
  "1d6ee957d757be",
  "171a33c89e1950",
  "09626b72d7fe90",
  "034395ede1b2fc",
  "060143eb5f8636",
  "09a9ffc25afe39",
  "1eea23cd1d3d3f",
  "157a59901e5941",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "11f072a496a8a3",
  "04009b3fb7ea9d",
  "0661e1bed76065",
  "155f1c9bfa1c03",
  "131db521b32dd4",
  "1ee41896f01efc",
  "00fccc6de45a16",
  "18ab0fcaec7f21",
  "0c2b2ce41fe4aa",
  "1e650e3f6f2d6d",
  "028ebf4ba078c5",
  "1e42fb39527ee6",
  "1b355bdce84c07",
  "0433a6d6e0614a",
  "03e0461c2159e5",
  "1e11236e2f7bde",
  "06b756f05607a9",
  "0e461fed079a55",
  "0035275c717812",
  "0d46796d5633a4",
  "05cfd29b97f272",
  "084f15ffacdfb9",
  "03029f5f2d0b1d",
  "12a0eb6ae6ee18",
  "1612748f46d656",
  "1b74df0fb348ab",
  "0910a68f49dca2",
  "144d24d33be1aa",
  "1794a44b9ab392",
  "1ccf9d1975c3c5",
  "0f22aa93da8376",
  "02096058f8d017",
  "1b4c17f56e83e6",
  "15b72380f4735c",
  "1c005454c74a19",
  "103a1d29de8faf",
  "0ed7d9bac5ce82",
  "0ea52dc0e268f2",
  "1cce09eca0565a",
  "04387886610cc5",
  "0bea11dae9e521",
  "0c4ddb8736f9ba",
  "1a47869818ae7b",
  "0a69abc84f130d",
  "12e6103e1b6481",
  "19710e914f7cd0",
  "147e2c07d5e5a9",
  "1e24c5cc0e5f4a",
  "1a80edd562ffa9",
  "154194e974307f",
  "12187d23701a55",
  "08f34543c58035",
  "0916aa841830b7",
  "19b41f98719b89",
  "099ecf1f645c0a",
  "1ffe1a8288c5e4",
  "08299cced5f03f",
  "17141cc1c95d34",
  "0f25f3815e3a25",
  "138d91df957e56",
  "0871b86675d4ef",
  "07bcc5383d5646",
  "0590f58bc1a527",
  "00f411cde71dcc",
  "00cea0c3562fc2",
  "1283c51ad80fc8",
  "0e4f626e7b110e",
  "18459e527c053f",
  "126a7aa9885ec5",
  "06ffd47fab64e4",
  "17e3a0cfe487a6",
  "08b82296c4f874",
  "0cb22aeee4b83c",
  "0aca0a27910cac",
  "19ed7d3450c75b",
  "0365e2e6fe6e8e",
  "1ef40789bbd42e",
  "16822c2ad0f46c",
  "1d8f306d53230b",
  "176fa53ebf5f08",
  "0674214fbed0b9",
  "0e6b33f6c4902b",
  "08fb11eda20c84",
  "19245413beda90",
  "01aa2b997913ea",
  "11f9acbbcb7526",
  "1504a7256dd100",
  "0abaad69e90ff3",
  "04c13772443e63",
  "18b695e3e4e0ea",
  "12746d78c83fd0",
  "00d63fbfe6bccf",
  "17c408b8004cf4",
  "1292613650dca2",
  "054d93e982b377",
  "19527a9d295c63",
  "044a6d9d25d27d",
  "00b000f2d516ff",
  "0e9ee429e63562",
  "031a3cfe22700c",
  "0f6ab5f903b2ef",
  "00134d14a1bee1",
  "13a15a8803af0e",
  "1475f7a1794b89",
  "1cfaae578402c1",
  "1a59a07ad804b8",
  "01e7e1e5de416d",
  "1306145cef8816",
  "13fbab4f3346d8",
  "05a7c453142365",
  "059b1f056fda0c",
  "121e584c8c76fc",
  "0aa1a5ee7ed5c8",
  "04f10567c01a59",
  "1b8b8d18f4e8a9",
  "198d214c927f15",
  "02dde2837611e3",
  "126d78098e1aa8",
  "1903fab93717c9",
  "0cdb1047d984d2",
  "0eca15e217199a",
  "0cae8d07250d41",
  "183ed6f538e1d6",
  "0bd093c96f6cc3",
  "12fc73f4251acf",
  "05fd7b9ffd0a74",
  "09829d438eeec1",
  "02249a8bf018c8",
  "02249207b5382c",
  "10544c11d0ad6a",
  "048b92115ba454",
  "05c6ca2b8af416",
  "0b81ee6ef4a6ce",
  "0a752b5735c64b",
  "172f86a6955501",
  "1878e23c216990",
  "0a15c02b7a8fac",
  "08b3253646e414",
  "00470063e4e9d4",
  "0f6eff803f3412",
  "04540312b71502",
  "190bdf9e6f139a",
  "11646050e3131c",
  "082ebf4885d6c2",
  "1fa6260c9f4fac",
  "1b7357075aa0ec",
  "1534062a79483e",
  "0186dc331a1c83",
  "1ead144a1dacee",
  "0e45c93a270904",
  "07798efd61eca7",
  "12cf8a75705d5e",
  "190cacbc9d65e9",
  "1c64f95c9e9edc",
  "12e7638274fb7a",
  "17fdea5f96c110",
  "128ede8b0908b3",
  "16e7a0ceef5601",
  "1cf753b4c0c152",
  "183e9390551041",
  "19582b910d9bf3",
  "16f6e9b1ae4d5a",
  "02f0cacb7c0377",
  "17c4bfd9a37c6c",
  "1e0c4ba995776f",
  "04c8946da60b23",
  "05a7f3f4b2b654",
  "129b9a506e1ef5",
  "132131d6c6824f",
  "08d18344262c2c",
  "1fc913d98f4b67",
  "153ef599362cf9",
  "1fb33b3e21a925",
  "0f27d1a64d50f2",
  "08fbf1f4a70907",
  "14ce656373ea46",
  "144976fa6856ac",
  "027298060a0baa",
  "15a19cee124cd9",
  "11ff02b270565c",
  "1cae9d9f80cd6e",
  "05475a7c1be350",
  "019c281393af0a",
  "0001a562b5a5bc",
  "00f33200675219",
  "01b2af492c9815",
  "047ec648f723bc",
  "00ac87f480b9cb",
  "196b57a8ca0078",
  "0eae111fbe2dfb",
  "0c3e20216dd910",
  "0528816d1f76dc",
  "117b0099f19d57",
  "008c1308d00a35",
  "0a93b8ca185cae",
  "06179dc7769cdc",
  "067cb33f620330",
  "00b1e48b362da7",
  "1a03bd3e41c64f",
  "1bd2a045b6d8a4",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1846944c4d716d",
  "04009b3fb7ea9d",
  "16aabcfb714452",
  "03d9e91310912c",
  "14bdb5ed135628",
  "0e6aecd37eb305",
  "17cce676223629",
  "19fe81306d9c47",
  "0c2b2ce41fe4aa",
  "1e650e3f6f2d6d",
  "028ebf4ba078c5",
  "13573548f28b71",
  "1c8a7437911b1c",
  "048cdb6ef032bb",
  "19e1fe5b4da348",
  "0e52159b7eb888",
  "06b756f05607a9",
  "1ca0e8f10aa81a",
  "1fe1d8cb7803d3",
  "0f80e1b8f66077",
  "070701492c2037",
  "084f15ffacdfb9",
  "16f55842903a23",
  "12a0eb6ae6ee18",
  "0e1ea098e183eb",
  "0e89ef1bc3ca64",
  "01c6d3b7959739",
  "0160ad55b91d52",
  "0db5ec6d0e58fe",
  "1ccf9d1975c3c5",
  "1e9d4f031c640c",
  "1ce3483c76ed29",
  "070c2206a52e85",
  "0fc1c7b73a3b67",
  "1615674b813c33",
  "1983698f9111da",
  "0fed086c0df55b",
  "0ea52dc0e268f2",
  "02726ce52c55b1",
  "06de6ec0259fc6",
  "07393a407c5e24",
  "1cbdf84772e5ac",
  "0ce963bdbb5e03",
  "1ecb6ec763c094",
  "12e6103e1b6481",
  "1671b26841dbe6",
  "05db7e21749998",
  "1eb1e402b165ec",
  "18468dc314842f",
  "154194e974307f",
  "1c3faa79b43feb",
  "08f34543c58035",
  "0476c1e75ff053",
  "08c59fd31eedcd",
  "193288a5034edf",
  "0f8919d9d9c26f",
  "19b4f8e779e11c",
  "17141cc1c95d34",
  "1cbfe81aa2c600",
  "138d91df957e56",
  "0e47fabd8b318f",
  "004e300a6f7d87",
  "02d7541f4b4147",
  "00f411cde71dcc",
  "1414c67a7fa61f",
  "0b92e31b39146a",
  "03ce1a9460d8e4",
  "07887e86791ba4",
  "126a7aa9885ec5",
  "019fde5cb0d226",
  "195ac46efea002",
  "1dd84cf64fa640",
  "0af950acdd5aab",
  "09aae866e69683",
  "187c2dd4a715e0",
  "18a7f4a543cce3",
  "03387019de45a1",
  "09d183c52aab42",
  "1d8f306d53230b",
  "12b751305d360d",
  "0e10e818566379",
  "0e6b33f6c4902b",
  "13fb59d38b4d17",
  "0e2af96a8ff494",
  "1f7f0926fe27b6",
  "1b30e68232a9eb",
  "121fcf81af49cd",
  "0e2f4f1872b79d",
  "06b8c3d57c3ea0",
  "1dc2410eb24fe8",
  "1123e3483f043f",
  "00d63fbfe6bccf",
  "0927d73e7a772c",
  "1292613650dca2",
  "054d93e982b377",
  "19527a9d295c63",
  "044a6d9d25d27d",
  "19cd8c52d61bbc",
  "0e9ee429e63562",
  "0b3ec2e0ea6e2f",
  "0560dbced8b71b",
  "018f1bdc696497",
  "13a15a8803af0e",
  "1475f7a1794b89",
  "0a79ff5400a821",
  "1a59a07ad804b8",
  "16cf5859f37b6d",
  "09ab9d0a9a1656",
  "12409c67dd5e51",
  "05a7c453142365",
  "059b1f056fda0c",
  "121e584c8c76fc",
  "0aa1a5ee7ed5c8",
  "0210a72ecd9e1f",
  "15268210740502",
  "0a618e3a894f7d",
  "1032373cedb95e",
  "126d78098e1aa8",
  "16cca8be3fc3f2",
  "1ac1c5677e4819",
  "0ea54280ba196d",
  "074aec105a2bbb",
  "1917060c6e71bf",
  "1cd9c4fb0a1b72",
  "085158b37460b7",
  "0a6300a3c66071",
  "09bb86d9766216",
  "141492083c35b9",
  "02249207b5382c",
  "1d5be8979b4641",
  "17d8650b84a326",
  "1014e757fb8b84",
  "0ac63a70adede1",
  "0a752b5735c64b",
  "16fb7e5c6f8320",
  "11cb7a8bdbe4a3",
  "09ce83479442f1",
  "005dae10ca26dd",
  "00470063e4e9d4",
  "0f6eff803f3412",
  "04540312b71502",
  "0d8f3c97f7a585",
  "11646050e3131c",
  "082ebf4885d6c2",
  "055ef070f7cc67",
  "122a17c1a885a1",
  "1f01c68ef76633",
  "1cdfa3e74f8dfc",
  "1ecac5931ed4b2",
  "0d44eaab519d0e",
  "1282cfe8ecbb8e",
  "0a4c052019cfcf",
  "1061f578438f4f",
  "12359d17c05314",
  "12e7638274fb7a",
  "09a9f972879b1b",
  "030efe37a43ff0",
  "16e7a0ceef5601",
  "1cf753b4c0c152",
  "183e9390551041",
  "0c0e335bd61af1",
  "025413e9d4aa90",
  "02f0cacb7c0377",
  "14435ab1785d15",
  "1e0c4ba995776f",
  "12a44c0eec83ff",
  "05a7f3f4b2b654",
  "11d878722ba851",
  "1326108c24fe72",
  "0a6402d2f025b9",
  "0bf5f7f809b9d1",
  "1a4ab2dc6b0222",
  "0b19bccd0a34ef",
  "0e94b568ac13c2",
  "1cdeb579585ce7",
  "0ef8ccf44e8426",
  "1a9f3f19c92e47",
  "027298060a0baa",
  "15a19cee124cd9",
  "11ff02b270565c",
  "10f7de95b81ff0",
  "05475a7c1be350",
  "019c281393af0a",
  "0945332f61cd85",
  "186d8021ad6d4e",
  "01b2af492c9815",
  "1fff7366085414",
  "00ac87f480b9cb",
  "04777ce1897832",
  "160f02dc64c806",
  "0120b2dd32442a",
  "0386eaa024fae6",
  "1d6ee957d757be",
  "171a33c89e1950",
  "09626b72d7fe90",
  "06179dc7769cdc",
  "060143eb5f8636",
  "09a9ffc25afe39",
  "1eea23cd1d3d3f",
  "157a59901e5941",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "112d8e80bb790e",
  "0b8f0a5d13b81f",
  "1e7c163022cf56",
  "0f99bce382a746",
  "0dc4376245f7bf",
  "1fb013ae19ebaa",
  "026a817784ff51",
  "058ba98fa64a0a",
  "1cf4255131b737",
  "11667c6d9640cb",
  "05dfef2368c90f",
  "0fcd371291c926",
  "075dbe4bea92da",
  "138e1739c04b91",
  "0fed9561feb906",
  "1ecf36df4ad162",
  "1524aadcb7394a",
  "1de2e2b741be6a",
  "19993b76ff4369",
  "00e6df1f527edd",
  "1600e176b6ed70",
  "0889909f0e09dd",
  "043938484d39f2",
  "15fe3ab565e5cd",
  "19afb29ef7cf18",
  "0d7b71df275cd1",
  "1c14b24a19ab5b",
  "1816a78fcb6395",
  "004f006de0646f",
  "13dd183da1ecb0",
  "0fd5fb78e71be3",
  "0c6f8b0113e488",
  "06853df175e306",
  "0a4a8869c3e6ce",
  "1d2f1b2f54acda",
  "12306c3a2b601c",
  "0af8ac2dccb9b9",
  "112318b756798b",
  "0d096f9e24c166",
  "0876cdc61ad212",
  "028734319166fc",
  "14fc6c643f9179",
  "1c0d28b8d5ce0f",
  "12885c3308efb3",
  "08818747b865ac",
  "0f810a407652e6",
  "15b8671f158ccc",
  "1b21fcced0ef68",
  "1feb4904f45a90",
  "1d1df67d71e5d9",
  "15ca5b436883c7",
  "0fdba115e188b5",
  "0379c0b8c5dc40",
  "0ffb6d47aa6fe6",
  "1d8ea7ef7ca482",
  "141733d19b0141",
  "07a268fcaf62e6",
  "1131d6b15a90c9",
  "0128198445b88b",
  "12cbf5e19490a3",
  "1cd6130c9e9d26",
  "1821e031fb255d",
  "14cce21afb51fe",
  "148583877f75af",
  "0e3f894a4b6fde",
  "1b7c6c7b2ec86f",
  "151b2baf5f035c",
  "17572194c9cf29",
  "04e4935b07ba1b",
  "1741f91a10f6eb",
  "0f4fd2e0e18a3e",
  "1c1aa372143723",
  "0c2c89a2adf6ce",
  "09b153ad430201",
  "16dc0b6f428b3d",
  "0333e47805fd08",
  "0e42995cab95b0",
  "071780c2a2f93d",
  "0edc63c9be3fda",
  "095ffa7c13ddf1",
  "0eaada6aeff337",
  "183b5a5e7a4d55",
  "0d046744aef54f",
  "02796078e2ba46",
  "17f6a0f2f1ee33",
  "0a9a19ed1be2ef",
  "18121733b781e9",
  "07c09287e44871",
  "1f28036fec0331",
  "00b0f864287e71",
  "179cab4d53afd5",
  "16b32e7be1b35f",
  "1a18dbc3a60392",
  "057607585985e8",
  "12cd30420f2ac4",
  "1ae57746554392",
  "107aa0bcbd914f",
  "1db60688e02367",
  "0420e60be03e92",
  "155f371315febc",
  "0023646fac974b",
  "10a46e4e44bbea",
  "0aee4cc96340d3",
  "057dd31e4b1977",
  "047b84f32369a2",
  "1982085ffe97ad",
  "1b1f7e90fd53fd",
  "1c3ecdf7ede737",
  "031fce4c151cb6",
  "0608ebd5e7e3d9",
  "06d2b63c292216",
  "1723d6005c347f",
  "1ae23db65e9d71",
  "0dba146e300edf",
  "00473a20d26f84",
  "1403ded240f2e4",
  "0035001ee3526a",
  "0029d9a018f858",
  "0329a8bb5c63c7",
  "1ef031b350995a",
  "1ca1031ec1c5e8",
  "0580c5d70dba23",
  "1cb935b0d37efa",
  "14aa3fb7b90ece",
  "10f955befa684f",
  "02267ba3a98d7d",
  "004d0c4e6bc769",
  "1a1a0854d0e8b4",
  "17c083a4d75a4f",
  "01393aab950ee2",
  "07ab1113c06084",
  "0abe638e3745d8",
  "040a641110cb78",
  "1cdf6c61bf45ac",
  "0b28f103ea2a4e",
  "1433bdd1b4eafe",
  "1ac4d34e2514a6",
  "13bfbd41187ee8",
  "07677d5ad459df",
  "02b9986a41a911",
  "01421c36d2cc65",
  "1cff3856999eab",
  "117f5e2928d125",
  "14a208680aa8eb",
  "1a883bce36a5c3",
  "1bf08c40a0a2e8",
  "031ed90a60bd6d",
  "0e339a540fe34b",
  "1971be93e040a9",
  "117fb0eee54bf9",
  "180c7d46307ba0",
  "0e0ffe80aef416",
  "19472d93fcdde1",
  "01e983a85d5ed6",
  "1d77c83827c445",
  "197a182da9a4ff",
  "1a471ee69458e9",
  "1197e348f88218",
  "19724a1191b434",
  "045866296ab819",
  "0787e4a4cb72ed",
  "0461472ac09330",
  "11159500fdef40",
  "1d854732e0edea",
  "19c4748e23276f",
  "192df069dc8fb0",
  "10e5627901eb0e",
  "127a331ae38fe1",
  "112ef7a1c0dcf3",
  "01d8d3377b4f75",
  "006bc9a31bb408",
  "190a9c9fb775de",
  "17b28d79b648e9",
  "0c77635805f960",
  "122144dea296af",
  "020c4bdc345e39",
  "0b552014d34491",
  "120088fdf23998",
  "000b09a1408cbc",
  "16b1cb4f6dce2d",
  "02f2e2dc030058",
  "060561d32915f3",
  "145eda74f19136",
  "1fa27da1c9b9c8",
  "0dc277b48e0a38",
  "1f18ea90ca9803",
  "055c636eb0ee46",
  "1badcb6c64c9ef",
  "08fdcb861c1875",
  "003c5569c62870",
  "0615b948a32d94",
  "0d8876c7286b28",
  "0dc8b43b0899d2",
  "082740a41e8e08",
  "0eb76185dd91fe",
  "1fd9b1ebb7eabc",
  "057fad235d12bf",
  "1125fc0a111800",
  "1a97b9e3ff0ded",
  "0bd5dae597adc0",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "01d09903a67f5e",
  "095c2fc346d11b",
  "138fb005e0afd5",
  "09df99d65f1ccc",
  "1421ffb42c68c9",
  "01b5d0306e2408",
  "038aa1665d4668",
  "1cd1523fe91f58",
  "1cf4255131b737",
  "1b07a550bffb8e",
  "0c90db70b73b79",
  "1ca44da617af1e",
  "18c1f197373944",
  "063a374c23f740",
  "1d2e763d51f1ba",
  "0c7b34211016b3",
  "0fc6e01bedf802",
  "1b8ff653602c10",
  "05d1c626b0e221",
  "0d68ce22c655f0",
  "0337af9ae88eeb",
  "019b7d0564a40e",
  "1f8da3d5fbf6b2",
  "048377845df2d5",
  "15cb81fad894f8",
  "022fc58880d9d1",
  "02245149445755",
  "0ec5da96201c84",
  "16d5cf72657860",
  "0b6b93c4829efa",
  "01e59fbfa2a03a",
  "16e6d161d17d4a",
  "06d9786361bd76",
  "0993d7f5473935",
  "1d6861069f33e6",
  "13e3db7803d5be",
  "11c3c5347a63e6",
  "169e5dc03d1a09",
  "0496dbe2920ede",
  "1cae2017f02897",
  "0364991ce43db3",
  "0fcbfcd5fd490b",
  "07dddd04066602",
  "15973ebd81fbf6",
  "08c040ffeda015",
  "0c369aadeb49f1",
  "0cfec3427584b2",
  "185f590430cf5b",
  "10b133baa04110",
  "1a7cb40d83ad85",
  "0072489a08b6a2",
  "0fdba115e188b5",
  "1a2ef485f538db",
  "05ae1888b24f85",
  "19b53ec98f34d2",
  "0bfa9f1e6f1b8f",
  "06368280c10a64",
  "1131d6b15a90c9",
  "1270310361d742",
  "1b0075c9852bf7",
  "0874b1e1382659",
  "1d54dd6793a7f4",
  "1eb1a99d0f72d4",
  "148583877f75af",
  "091819f9ed911d",
  "1074ea5475624f",
  "1d1f46ef51c0b6",
  "1c6fdf4d58d9af",
  "0edfeb68204e9d",
  "1c6842546efc36",
  "172fb70baba265",
  "18261229515f3f",
  "14fb7514033e10",
  "1df9fb6ebff546",
  "1671ce70f3558c",
  "1be70959ae9555",
  "1baff05cdc891d",
  "046650813d75e5",
  "1d66c039c17cd7",
  "1b0d6368594f8b",
  "140705f237a95d",
  "02c4df0d0f7ab2",
  "10f718b2500571",
  "01ceca0df8db39",
  "07446ed12cd379",
  "1097713dccc87f",
  "12793a006bb0e7",
  "1b9df5081cdbd8",
  "12f2ad4b4ca1b5",
  "10f1cceed157a0",
  "0c8e8c849b50d1",
  "0756a49a8d2695",
  "0fbce40a4e413a",
  "087376bd0cf1a8",
  "1b54106e032508",
  "09120563aaf837",
  "1dae6781079c46",
  "0b7ff78d266aa7",
  "0fc90f09ab8cbe",
  "1d32ae77deb7de",
  "16010a69a04889",
  "07cf21fb1058ca",
  "135f0540a70d6e",
  "056f72171d4910",
  "1f55053298507f",
  "0a4dc7fe4dde36",
  "13229e9b767b16",
  "0b05334bb92561",
  "09047cd136d402",
  "0cfb98c187e9f5",
  "1866f6a34d7203",
  "1723d6005c347f",
  "1c98f6a5226aa0",
  "1db704850ca3dc",
  "00e60acb5996ac",
  "03df10d5de4401",
  "1ae9068e8ae736",
  "04175e1db69575",
  "10feb30e8c07e6",
  "1b98b888068ae5",
  "0fef12e8e53e22",
  "1e02e0280a2685",
  "1bb3be37d64580",
  "002477462035f9",
  "0402ac9cf97eeb",
  "12015d2a268784",
  "1cc088f06178b4",
  "169f65930b0d00",
  "0de08b7ba3d7cd",
  "0ff29087c8c142",
  "07d68ff9205475",
  "040aef4570837f",
  "149a220abab554",
  "0c6acc8a863613",
  "11eee6d96ccc35",
  "12029b8d704954",
  "1f59ef8bcb8b0a",
  "086d457bba71f9",
  "17799bd42c5209",
  "165198f3477a10",
  "01421c36d2cc65",
  "0fb0b04d42b8f3",
  "117f5e2928d125",
  "0a3517254fae32",
  "07ccaab40f59d0",
  "0c37373b8d4a7e",
  "0b896a9b114070",
  "0d66479736886d",
  "1882f6725bf24b",
  "1c424a1b034c19",
  "12047894ea8e4e",
  "14bea7903a9fab",
  "066c2056a2b993",
  "1eea92fc63a9db",
  "0504dbeca77d28",
  "0f0ae1a5bade51",
  "072ad1fd72a4fb",
  "07424004be50b9",
  "1f875c899eef28",
  "07167866ecc1e8",
  "02e26b850ae6a0",
  "18f32a8cb55c46",
  "0a8ede17c23a4c",
  "159768f0056f09",
  "0927062800df9b",
  "14123c6f577ae1",
  "10e5627901eb0e",
  "11fac760986db7",
  "0514470eccf76b",
  "18a97bba153ab9",
  "1cc4d4c53ecdbe",
  "05e8d35ede40da",
  "15e687ab893896",
  "1f542b095d0654",
  "1dffe3ce7fa56a",
  "11d7d002b49469",
  "1b07135d19573a",
  "12cc7159a8e9cb",
  "1a3a10537a5a2a",
  "1b1534b92928a0",
  "147f2aa58b1e3a",
  "06b73e851e13a0",
  "1a3e2e28f4720e",
  "1e9f9f43da1214",
  "04a354f7c5a1e0",
  "08bc1f50ee610b",
  "01a66c12f2b369",
  "043a92316a1507",
  "1ddcd8de28cc50",
  "06c218ea39c54c",
  "0fc70b868bdef6",
  "165fe5922ca25e",
  "11195495b28685",
  "1ad16d421a76bf",
  "11d647e2db229d",
  "0d1a714ab99aa7",
  "1cc07ccd7708d8",
  "0eca101df34df9",
  "01e05fa9576976",
  "1487f6c48d678d",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "112d8e80bb790e",
  "095c2fc346d11b",
  "1e7c163022cf56",
  "0f99bce382a746",
  "0dc4376245f7bf",
  "1fb013ae19ebaa",
  "026a817784ff51",
  "058ba98fa64a0a",
  "1cf4255131b737",
  "1b07a550bffb8e",
  "0c90db70b73b79",
  "0fcd371291c926",
  "075dbe4bea92da",
  "138e1739c04b91",
  "0fed9561feb906",
  "1ecf36df4ad162",
  "0fc6e01bedf802",
  "1de2e2b741be6a",
  "19993b76ff4369",
  "00e6df1f527edd",
  "1600e176b6ed70",
  "019b7d0564a40e",
  "043938484d39f2",
  "048377845df2d5",
  "19afb29ef7cf18",
  "0d7b71df275cd1",
  "1c14b24a19ab5b",
  "1816a78fcb6395",
  "004f006de0646f",
  "0b6b93c4829efa",
  "0fd5fb78e71be3",
  "0c6f8b0113e488",
  "06853df175e306",
  "0a4a8869c3e6ce",
  "1d2f1b2f54acda",
  "12306c3a2b601c",
  "0af8ac2dccb9b9",
  "169e5dc03d1a09",
  "0d096f9e24c166",
  "0876cdc61ad212",
  "028734319166fc",
  "14fc6c643f9179",
  "1c0d28b8d5ce0f",
  "12885c3308efb3",
  "08c040ffeda015",
  "0f810a407652e6",
  "15b8671f158ccc",
  "1b21fcced0ef68",
  "1feb4904f45a90",
  "1a7cb40d83ad85",
  "15ca5b436883c7",
  "0fdba115e188b5",
  "0379c0b8c5dc40",
  "0ffb6d47aa6fe6",
  "1d8ea7ef7ca482",
  "141733d19b0141",
  "07a268fcaf62e6",
  "1131d6b15a90c9",
  "0128198445b88b",
  "1b0075c9852bf7",
  "1cd6130c9e9d26",
  "1821e031fb255d",
  "14cce21afb51fe",
  "148583877f75af",
  "0e3f894a4b6fde",
  "1b7c6c7b2ec86f",
  "151b2baf5f035c",
  "17572194c9cf29",
  "0edfeb68204e9d",
  "1741f91a10f6eb",
  "0f4fd2e0e18a3e",
  "1c1aa372143723",
  "0c2c89a2adf6ce",
  "09b153ad430201",
  "16dc0b6f428b3d",
  "0333e47805fd08",
  "0e42995cab95b0",
  "071780c2a2f93d",
  "1d66c039c17cd7",
  "095ffa7c13ddf1",
  "0eaada6aeff337",
  "02c4df0d0f7ab2",
  "0d046744aef54f",
  "02796078e2ba46",
  "17f6a0f2f1ee33",
  "0a9a19ed1be2ef",
  "18121733b781e9",
  "07c09287e44871",
  "1f28036fec0331",
  "00b0f864287e71",
  "179cab4d53afd5",
  "0756a49a8d2695",
  "1a18dbc3a60392",
  "087376bd0cf1a8",
  "1b54106e032508",
  "09120563aaf837",
  "1dae6781079c46",
  "1db60688e02367",
  "0fc90f09ab8cbe",
  "155f371315febc",
  "0023646fac974b",
  "10a46e4e44bbea",
  "135f0540a70d6e",
  "056f72171d4910",
  "047b84f32369a2",
  "0a4dc7fe4dde36",
  "1b1f7e90fd53fd",
  "1c3ecdf7ede737",
  "031fce4c151cb6",
  "0cfb98c187e9f5",
  "1866f6a34d7203",
  "1723d6005c347f",
  "1c98f6a5226aa0",
  "0dba146e300edf",
  "00473a20d26f84",
  "1403ded240f2e4",
  "0035001ee3526a",
  "04175e1db69575",
  "0329a8bb5c63c7",
  "1ef031b350995a",
  "1ca1031ec1c5e8",
  "0580c5d70dba23",
  "1cb935b0d37efa",
  "14aa3fb7b90ece",
  "10f955befa684f",
  "02267ba3a98d7d",
  "004d0c4e6bc769",
  "1a1a0854d0e8b4",
  "0de08b7ba3d7cd",
  "01393aab950ee2",
  "07ab1113c06084",
  "0abe638e3745d8",
  "040a641110cb78",
  "0c6acc8a863613",
  "0b28f103ea2a4e",
  "1433bdd1b4eafe",
  "1ac4d34e2514a6",
  "13bfbd41187ee8",
  "17799bd42c5209",
  "165198f3477a10",
  "01421c36d2cc65",
  "1cff3856999eab",
  "117f5e2928d125",
  "0a3517254fae32",
  "1a883bce36a5c3",
  "1bf08c40a0a2e8",
  "031ed90a60bd6d",
  "0e339a540fe34b",
  "1971be93e040a9",
  "117fb0eee54bf9",
  "180c7d46307ba0",
  "0e0ffe80aef416",
  "19472d93fcdde1",
  "01e983a85d5ed6",
  "0504dbeca77d28",
  "197a182da9a4ff",
  "1a471ee69458e9",
  "07424004be50b9",
  "1f875c899eef28",
  "07167866ecc1e8",
  "0787e4a4cb72ed",
  "0461472ac09330",
  "0a8ede17c23a4c",
  "1d854732e0edea",
  "0927062800df9b",
  "192df069dc8fb0",
  "10e5627901eb0e",
  "127a331ae38fe1",
  "112ef7a1c0dcf3",
  "01d8d3377b4f75",
  "006bc9a31bb408",
  "190a9c9fb775de",
  "17b28d79b648e9",
  "0c77635805f960",
  "122144dea296af",
  "020c4bdc345e39",
  "0b552014d34491",
  "12cc7159a8e9cb",
  "1a3a10537a5a2a",
  "1b1534b92928a0",
  "02f2e2dc030058",
  "06b73e851e13a0",
  "1a3e2e28f4720e",
  "1fa27da1c9b9c8",
  "0dc277b48e0a38",
  "08bc1f50ee610b",
  "055c636eb0ee46",
  "043a92316a1507",
  "08fdcb861c1875",
  "003c5569c62870",
  "0615b948a32d94",
  "0d8876c7286b28",
  "0dc8b43b0899d2",
  "082740a41e8e08",
  "0eb76185dd91fe",
  "0d1a714ab99aa7",
  "057fad235d12bf",
  "1125fc0a111800",
  "1a97b9e3ff0ded",
  "0bd5dae597adc0",
]
`;
